--- a/web/css/landing-page.css
+++ b/web/css/landing-page.css
@@ -124,3 +124,9 @@ footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+
+.img-thumbnail{
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
