--- a/web/css/landing-page.css
+++ b/web/css/landing-page.css
@@ -132,9 +132,11 @@ footer.footer {
 }
 
 .view {
+  padding:none;
   position: relative;
   overflow: hidden;
-  cursor: default
+  cursor: default;
+  width: 255;
 }
 
 .view .mask {
@@ -166,3 +168,6 @@ footer.footer {
 .rgba-green-strong:after {
     background-color: rgba(76, 175, 80, 0.7)
 }
+
+
+
